--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,14 @@
 *.suo
 *.user
 *.userosscache
+*.cache
 *.sln.docstates
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
 # Build results
-obj/*
+#[Oo]bj/*
 bin/*
 [Dd]ebug/
 [Dd]ebugPublic/
